# natcap-take-home-test

./: .pre-commit-config.yaml  Dockerfile  README.md  part_2_technical_design_document.md  pyproject.toml
docker/: entrypoint.sh
take_home_test_starter/: __main__.py
