[tool.poetry]
name = "take_home_test_starter"
version = "0.1.0"
description = ""
authors = ["natcap <take-home-test@natcapresearch.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
pre-commit = "^2.20.0"
pylint = "^2.15.8"
isort = "^5.10.1"
pytest = "^7.2.0"
mypy = "^0.991"
commitizen = "^2.38.0"
pdoc = "^12.3.0"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
version_files = [
    "pyproject.toml:version"
]
tag_format = "$version"
update_changelog_on_bump = true

[tool.pylint.main]
disable = [
    "C0114" # missing-module-docstring
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
